# campuskards-next

./: .env.example  .gitignore  BACKEND-GAP.md  DEVELOPMENT.md  GAME-ADDON.md  README.md  migrate_checkins.py
backend/: BACKEND-PLAN.md  Dockerfile  Dockerfile.dev  alembic.ini  pyproject.toml
backend/alembic/: env.py
backend/alembic/versions/: 002_upgrade_system.py  085f04087e35_widen_faction_columns.py  3690c463404a_user_checkins.py  3c1a47e80688_add_announcements_and_user_role.py  a1b2c3d4e5f6_add_reset_key_and_ink.py  a1b2d3e4f5a6_story_tables.py  b4c5d6e7f8a9_match_mode_replay.py  c5d6e7f8a9b0_fix_columns_add_fks.py  d6e7f8a9b0c1_add_token_version.py  e8f9a0b1c2d3_admin_audit_logs.py  f697305bb47d_initial.py  fc459ca2775f_add_performance_indexes.py
backend/app/: main.py
backend/app/api/: admin.py  announcements.py  auth.py  cards.py  checkin.py  collection.py  decks.py  leaderboard.py  match.py  shop.py  story.py  user.py
backend/app/core/: battlefield.py  cache.py  card_keywords.py  card_level_stats.py  combat.py  combat_rules.py  config.py  database.py  effect_choices.py  effect_engine.py  faction_passives.py  faction_synergy.py  game_engine.py  game_persistence.py  game_protocol.py  security.py  (+4 more)
backend/app_backup_1780665088/: main.py
backend/scripts/: card-data.json  expand_cards.py  seed_cards.py
backend/tests/: conftest.py  test_auth.py  test_critical_regressions.py  test_decks.py  test_elo.py  test_game_engine.py  test_game_persistence.py  test_game_protocol.py  test_leaderboard.py  test_matchmaking.py  test_pve_ai.py  test_redis_matchmaking.py
(+200 files in other folders)
